<resources>
    <string name="app_name">CheckMySelf</string>
    <string name="you_cancel_location_permission">You canceled location permission</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="your_health_vitals_at_your_fingertips">Your health vitals at your fingertips</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_internet_connection">No internet connection, Please try again</string>
    <string name="error_message_no_network">You are not currently connected to the internet.\n Please try again when you get online.</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading…</string>
    <string name="no_result_found">No Result Found</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_que">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an Account? Sign Up</string>
    <string name="email_not_found_msg">Couldn\'t find this email address in our records</string>
    <string name="todo">TODO</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="pls_enter_email">Please enter email</string>
    <string name="pls_enter_valid_email">Please enter valid email</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="check_my_self_copy_right">CheckMySelf © 2023</string>
    <string name="tutorial_0_title">Measure your vital signs</string>
    <string name="tutorial_0_message">Look at the front-facing (Selfie) camera or place your finger over the rear-facing camera.</string>
    <string name="tutorial_1_title">How to use face measurement</string>
    <string name="tutorial_1_message">For best results, try to place the device on a stand an arm\'s length away from your face.</string>
    <string name="tutorial_2_title">How to use face measurement</string>
    <string name="tutorial_2_message">Make sure there is no light source behind you - only in front of you. Look straight into the camera.</string>
    <string name="tutorial_3_title">How to use finger measurement</string>
    <string name="tutorial_3_message">Sit comfortably. Place your index finger on the camera, applying moderate pressure.</string>
    <string name="tutorial_4_title">How to use finger measurement</string>
    <string name="tutorial_4_message">Make sure that your finger completely covers the relevant rear camera. Do not cover the flashlight.</string>
    <string name="get_started">Get Started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="get_otp">Get OTP</string>
    <string name="forgot_password_msg">Please enter your registered email address and we will send you  the OTP (One Time Password).</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Have an Account? Log In</string>
    <string name="please_select_dob">Please select date of birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="weight_in_kg">Weight (in kgs)</string>
    <string name="height_in_cms">Height (in cms)</string>
    <string name="pls_enter_first_name">Please enter first name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_a_strong_password">Enter a strong password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_didnt_match_the_guidelines">Password didn\'t match the guidelines</string>
    <string name="password_didnt_match">Password didn\'t match</string>
    <string name="pls_enter_weight">Please enter weight</string>
    <string name="pls_enter_height">Please enter height</string>
    <string name="password_guidelines">Password Guidelines:</string>
    <string name="password_guideline_1">Must have 1 uppercase letter and 1 special character (!@#$%^&amp;).</string>
    <string name="password_guideline_2">Must have at least 8 but not exceed 20 alphanumeric characters.</string>
    <string name="password_guideline_3">Must not contain spaces.</string>
    <string name="enter_activation_code">Enter activation code</string>
    <string name="activation_code_sent_on_email_msg">Please enter the activation code sent  to your email address.</string>
    <string name="activate">Activate</string>
    <string name="resend_activation_code">Resend Activation Code</string>
    <string name="before_getting_started">Before getting started</string>
    <string name="continue_">Continue</string>
    <string name="before_started_msg">This App is NOT a medical or diagnostic product.\n\nMeasurements provided by this application are intended for informational purposes only and aim to promote general wellness.\n\nThe measured indicators are not intended for medical purposes; they are designed only for general fitness and wellness.\n\nYour data and measurements will be stored and processed by the App.</string>
    <string name="term_check_full_text">I have read and agree to the Terms of Use and the Privacy Policy.</string>
    <string name="term_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello">Hello</string>
    <string name="you_are_registered_now">You‘re now a registered user!</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_code_sent_on_email_msg">Please enter the OTP sent to your registered email address.</string>
    <string name="didnt_received_otp">Didn\'t received the OTP?</string>
    <string name="resend">Resend</string>
    <string name="create_a_new_password">Create a new password</string>
    <string name="create_password">Create Password</string>
    <string name="your_password_has_been_reset">Your password has been successfully reset!</string>
    <string name="you_can_now_use_new_password">You can now use your new password to log in to your account.</string>
    <string name="return_to_login">Return to Login</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="done">Done</string>
    <string name="health_history">Health History</string>
    <string name="about_the_app">About the App</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="view_profile">View Profile</string>
    <string name="no">No</string>
    <string name="health_scan">Health Scan</string>
    <string name="profile">Profile</string>
    <string name="your_bmi">Your BMI</string>
    <string name="your_category">Your Category</string>
    <string name="save_changes">Save Changes</string>
    <string name="app_walk_through">App Walkthrough</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="got_it">Got it</string>
    <string name="face_option_select_title">%s, ready to measure your vital signs?</string>
    <string name="face_option_select_msg">Sit still, ensure your face is evenly illuminated and there is no light source behind you.</string>
    <string name="finger_option_select_title">Place your finger on the rear camera (not on the selfie camera).</string>
    <string name="finger_option_select_msg">Place your finger on the camera\n(not the flashlight), applying moderate pressure. Click Measure Now.</string>
    <string name="measure_now">Measure Now</string>
    <string name="face">Face</string>
    <string name="finger">Finger</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_want_to_delete_account">Are you sure want to delete account?</string>
    <string name="delete">Delete</string>
    <string name="app_version">App Version</string>
    <string name="sdk_version">SDK Version</string>
    <string name="about_app_link_text">For more information on CheckMySelf visit us at: https://carepointdevelopment.eu/</string>
    <string name="no_measurement_were_taken">No measurements were\ntaken on this date</string>
    <string name="wellness_score">Wellness Score</string>
    <string name="breathing_rate">Breathing Rate</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="prq">PRQ</string>
    <string name="oxygen_saturation">Oxygen Saturation</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="stress_level">Stress Level</string>
    <string name="recovery_ability">Recovery Ability</string>
    <string name="stress_response">Stress Response</string>
    <string name="hrv_sdnn">HRV-SDNN</string>
    <string name="view_more">View More</string>
    <string name="bpm">bpm</string>
    <string name="brpm">brpm</string>
    <string name="ms">ms</string>
    <string name="moving_or_disruption_identified_msg">Movements or other disruptions were identified. Try again, looking directly into the camera without moving until the measurement is complete.</string>
    <string name="face_not_detected">Face not detected</string>
    <string name="face_not_detected_msg">Please point the camera to your face and make sure you are not too far or too close.</string>
    <string name="face_scanning_msg">Please stay still and avoid unnecessary movements until face detection is complete.</string>
    <string name="stop">Stop</string>
    <string name="error_message">Error (%d)</string>
    <string name="warning_message_1">Warning (%s)</string>
    <string name="ok">Ok</string>
    <string name="no_finger_detected">Place your finger on the rear camera</string>
    <string name="finger_scan_hint">Place your finger on the rear camera (not on the selfie camera).</string>
    <string name="finger_scanning_msg">Make sure that your finger completely covers the camera.</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="rate_your_experience_with">Rate your experience with</string>
    <string name="feedback_title">Feedback Title</string>
    <string name="ex_works_beautifully">Ex. Works Beautifully!</string>
    <string name="write_your_feedback">Write Your Feedback</string>
    <string name="type_your_feedback_here">Type Your Feedback Here</string>
    <string name="pls_enter_feedback_title">Please enter feedback title</string>
    <string name="pls_enter_feedback">Please enter feedback</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="mild">Mild</string>
    <string name="orientation_not_supported">Unsupported orientation. Return to portrait mode</string>
    <string name="change_session_mode_error">Failed changing mode. Try again</string>
    <string name="frames_lost_face_error">Try again, making sure to look straight into the camera without moving until the measurement is complete.</string>
    <string name="frames_lost_finger_error">Try again, making sure not to remove your finger from the camera until the measurement is complete.</string>
    <string name="frames_lost_warning">Could not collect enough data during the last few seconds. Please try not to move.</string>
    <string name="face_reset_error">Movements or other disruptions were identified. Try again, looking directly into the camera without moving until the measurement is complete.</string>
</resources>