<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_25"
        tools:context=".onboarding.ui.activity.ResetPasswordSuccessActivity">

        <ImageView
            android:id="@+id/ivLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/splash_logo"
            app:layout_constraintBottom_toTopOf="@+id/title_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_txt"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:text="@string/your_password_has_been_reset"
            android:textSize="@dimen/onboading_header_text_size"
            app:layout_constraintBottom_toTopOf="@+id/message_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message_text"
            style="@style/TextViewStyleRegular"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/you_can_now_use_new_password"
            android:textColor="@color/secondary_text_color"
            app:layout_constraintBottom_toTopOf="@+id/return_to_login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_txt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/return_to_login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/rc_gray_filled_c25"
            android:enabled="false"
            android:fontFamily="@font/switzer_regular"
            android:onClick="@{onClickListener}"
            android:text="@string/return_to_login"
            android:textAllCaps="false"
            android:textColor="@color/disabled_btn_text_color"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>