<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_25"
        tools:context=".onboarding.ui.activity.SplashActivity">

        <ImageView
            android:id="@+id/ivBgImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:onClick="@{onClickListener}"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_45"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_txt"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textSize="@dimen/onboading_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message_txt"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/dp_10"
            android:text="@string/forgot_password_msg"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_txt" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_txt">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_edit"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:background="@null"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/email_divider"
                app:layout_constraintEnd_toStartOf="@+id/iv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:onClick="@{onClickListener}"
                android:src="@drawable/tick"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/email_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_edit"
                app:layout_constraintTop_toTopOf="@+id/email_edit" />

            <View
                android:id="@+id/email_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_0_7"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/et_hint_color"
                app:layout_constraintBottom_toTopOf="@+id/email_error_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_error_text"
                style="@style/TextViewStyleRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/error_info"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/email_not_found_msg"
                android:textColor="@color/error_msg_text_color"
                android:textSize="@dimen/sp_14"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_otp_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/rc_gray_filled_c25"
            android:enabled="false"
            android:fontFamily="@font/switzer_medium"
            android:onClick="@{onClickListener}"
            android:text="@string/get_otp"
            android:textAllCaps="false"
            android:textColor="@color/disabled_btn_text_color"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>