<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_25"
        tools:context=".onboarding.ui.activity.LoginActivity">

        <ImageView
            android:id="@+id/ivBgImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:onClick="@{onClickListener}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_45"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_txt"
            style="@style/TextViewStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textSize="@dimen/onboading_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoImage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_txt">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_edit"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/email_divider"
                app:layout_constraintEnd_toStartOf="@+id/iv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:onClick="@{onClickListener}"
                android:src="@drawable/tick"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/email_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_edit"
                app:layout_constraintTop_toTopOf="@+id/email_edit" />

            <View
                android:id="@+id/email_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_0_7"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/et_hint_color"
                app:layout_constraintBottom_toTopOf="@+id/email_error_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_error_text"
                style="@style/TextViewStyleLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/error_info"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/email_not_found_msg"
                android:textColor="@color/error_msg_text_color"
                android:textSize="@dimen/sp_14"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cr_email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_edit"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/password_divider"
                app:layout_constraintEnd_toStartOf="@+id/iv_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:onClick="@{onClickListener}"
                android:padding="@dimen/dp_5"
                android:src="@drawable/hide_password"
                app:layout_constraintBottom_toBottomOf="@+id/password_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/password_edit"
                app:layout_constraintTop_toTopOf="@+id/password_edit" />

            <View
                android:id="@+id/password_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_0_7"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/et_hint_color"
                app:layout_constraintBottom_toTopOf="@+id/password_error_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/password_error_text"
                style="@style/TextViewStyleLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/error_info"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/incorrect_password"
                android:textColor="@color/error_msg_text_color"
                android:textSize="@dimen/sp_14"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot_pwd_text"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:gravity="center_horizontal"
            android:padding="@dimen/dp_5"
            android:onClick="@{onClickListener}"
            android:text="@string/forgot_password_que"
            android:textColor="@color/blue_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cr_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/rc_gray_filled_c25"
            android:enabled="false"
            android:fontFamily="@font/switzer_regular"
            android:onClick="@{onClickListener}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/disabled_btn_text_color"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pwd_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dont_have_account_text"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:onClick="@{onClickListener}"
            android:padding="@dimen/dp_5"
            android:text="@string/dont_have_account"
            android:textColor="@color/blue_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:onClick="@{onClickListener}"
            android:padding="@dimen/dp_5"
            android:text="@string/check_my_self_copy_right"
            android:textColor="@color/copy_write_text_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>